# lvgl_xiaozhi_gui

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lv_conf.h  main.c
cmake/: toolchain-luckfox-pico.cmake
common/: CMakeLists.txt
common/event_manager/: event_manager.c
common/gpio_manager/: gpio_manager.h
common/sys_manager/: sys_manager.h
gui_app/: CMakeLists.txt  cJSON.c  cJSON.h  inter_process_comms.c  inter_process_comms.h  ui.c  ui.h
gui_app/pages/ui_ChatBotPage/: ui_ChatBotPage.c
ui/: CMakeLists.txt  cJSON.h  inter_process_comms.c  inter_process_comms.h  ui.c  ui.h
ui/common/: lv_lib.h  lv_lib_conf.h
ui/common/animation/: lv_lib_animation.c
ui/fonts/: freetype_fonts.c  freetype_fonts.h
ui/pages/ui_ChatBotPage/: ui_ChatBotPage.c
